erDiagram
    USER {
        int id_user PK
        string username
        string email
        string hashed_password
        string nom
        string prenom
        string role
        boolean est_actif
    }
    
    RESPONSABLE_LEGAL {
        int id_responsable PK
        string nom
        string prenom
        string contact
        string adresse
        string email
        string telephone
    }
    
    ELEVE {
        int id_eleve PK
        int id_responsable FK
        string nom
        string prenom
        date date_naissance
        string sexe
    }
    
    NIVEAU {
        int id_niveau PK
        string nom
        string description
    }
    
    MATIERE {
        int id_matiere PK
        string nom
        string description
    }
    
    CLASSE {
        int id_classe PK
        int id_niveau FK
        string nom
        int capacite_max
    }
    
    CRENEAU {
        int id_creneau PK
        string jour
        time heure_debut
        time heure_fin
    }
    
    CLASSE_CRENEAU {
        int id_classe_creneau PK
        int id_classe FK
        int id_creneau FK
        int places_disponibles
    }
    
    ANNEE_SCOLAIRE {
        int id_annee PK
        string libelle
        date date_debut
        date date_fin
        boolean est_active
    }
    
    INSCRIPTION {
        int id_inscription PK
        int id_eleve FK
        int id_classe_creneau FK
        int id_annee_scolaire FK
        date date_inscription
        string statut
    }
    
    PAIEMENT {
        int id_paiement PK
        int id_responsable FK
        int id_inscription FK
        decimal montant
        date date_paiement
        string type_paiement
        string trimestre
        string reference
    }
    
    RECU {
        int id_recu PK
        int id_paiement FK
        string numero_recu
        date date_emission
        boolean tampon
    }
    
    CLASSE_MATIERE {
        int id_classe_matiere PK
        int id_classe FK
        int id_matiere FK
    }
    
    COURS {
        int id_cours PK
        int id_matiere FK
        int id_classe FK
        int id_enseignant FK
        int id_creneau FK
        int id_annee_scolaire FK
        text objectifs
    }
    
    SEANCE {
        int id_seance PK
        int id_cours FK
        date date_seance
        text contenu
        text commentaire
        boolean est_annulee
        text motif_annulation
    }
    
    ABSENCE {
        int id_absence PK
        int id_eleve FK
        int id_seance FK
        string statut
        text motif
        date date_justification
    }
    
    RESPONSABLE_LEGAL ||--o{ ELEVE : "a la responsabilité de"
    RESPONSABLE_LEGAL ||--o{ PAIEMENT : "effectue"
    NIVEAU ||--o{ CLASSE : "contient"
    CLASSE ||--o{ CLASSE_CRENEAU : "est disponible sur"
    CRENEAU ||--o{ CLASSE_CRENEAU : "est associé à"
    ELEVE ||--o{ INSCRIPTION : "peut s'inscrire à"
    CLASSE_CRENEAU ||--o{ INSCRIPTION : "accueille"
    ANNEE_SCOLAIRE ||--o{ INSCRIPTION : "concerne"
    INSCRIPTION ||--o{ PAIEMENT : "génère"
    PAIEMENT ||--|| RECU : "produit"
    CLASSE ||--o{ CLASSE_MATIERE : "enseigne"
    MATIERE ||--o{ CLASSE_MATIERE : "est enseignée dans"
    
    %% Nouvelles relations
    USER ||--o{ COURS : "enseigne"
    MATIERE ||--o{ COURS : "est enseignée dans"
    CLASSE ||--o{ COURS : "est dispensé dans"
    CRENEAU ||--o{ COURS : "se déroule sur"
    ANNEE_SCOLAIRE ||--o{ COURS : "est programmé pour"
    COURS ||--o{ SEANCE : "se compose de"
    SEANCE ||--o{ ABSENCE : "peut avoir"
    ELEVE ||--o{ ABSENCE : "peut être absent à"